<resources>
    <string name="app_name">Swoosh</string>
    <string name="get_started">Get Started</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="this_is_the_background_image">this is the background image</string>
    <string name="this_is_the_swoosh_logo">this is the swoosh logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">MENS</string>
    <string name="womens">WOMENS</string>
    <string name="coed">COED</string>
    <string name="next">NEXT</string>
    <string name="i_am_a">I am a:</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
    <string name="todo">TODO</string>
    <string name="beginner">Beginner</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
</resources>